fix: fixed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,20 +66,33 @@
   background: #9ca3af;
 }
 
-.h-scroll {
-  scrollbar-width: thin;
-  scrollbar-color: #d1d5db transparent;
-}
-.h-scroll::-webkit-scrollbar {
-  height: 8px;
-}
-.h-scroll::-webkit-scrollbar-track {
-  background: transparent;
-}
-.h-scroll::-webkit-scrollbar-thumb {
-  background-color: #d1d5db;
-  border-radius: 9999px;
-}
-.h-scroll:hover::-webkit-scrollbar-thumb {
-  background-color: #9ca3af;
+@layer utilities {
+  .nice-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(156 163 175) transparent;
+  }
+  .nice-scrollbar::-webkit-scrollbar {
+    height: 8px;
+  }
+  .nice-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+    margin-inline: 8px;
+  }
+  .nice-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(209 213 219);
+    border-radius: 9999px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+  .nice-scrollbar:hover::-webkit-scrollbar-thumb {
+    background-color: rgb(156 163 175);
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 }
